--- a/handin-1.0.tex
+++ b/handin-1.0.tex
@@ -5,7 +5,7 @@
 \usepackage{graphicx,amssymb,amstext,amsmath,listings,color}
 \usepackage{setspace,varioref,url,placeins}
 
-\def\author			{Ludvig Widman(dit06lwn), Emil Eriksson(c07een)} 
+\def\author			{Ludvig Widman(dit06lwn), Emil Eriksson(c07een)}
 \def\email			{}
 \def\course			{Distributed Systems. 5DV020, HT09}
 \def\delivery		{Assignment part 1}
@@ -63,9 +63,9 @@ REQUIRED The group leader must regularly make sure that the group and leader is 
 
 REQUIRED Any process must be able to create a new group and register itself as leader in the registry.
 
-REQUIRED Any process must be able to join a group by conencting to the group leader. 
+REQUIRED Any process must be able to join a group by connecting to the group leader.
 
-REQUIRED Every process in a group must noitfy the other processes of any known changes to the group composition.
+REQUIRED Every process in a group must notify the other processes of any known changes to the group composition.
 
 REQUIRED Every process must keep track of the members of all group it's in.
 
@@ -80,9 +80,9 @@ REQUIRED It must be possible to send messages to the members of joined group.
 
 REQUIRED Both non-reliable and reliable multicast must be supported for sending messages.
 
-REQUIRED The communication method choosen by the group creator (reliable or non-reliable multicast) must be used when communicating in a group.
+REQUIRED The communication method chosen by the group creator (reliable or non-reliable multicast) must be used when communicating in a group.
 
-REQUIRED Every mesage must contain a updated vector clock.
+REQUIRED Every message must contain a updated vector clock.
 
 
 
@@ -137,7 +137,7 @@ Design a solution
 
 \subsection{CommunicationModule}
 Send and recieves messages to and from other processes. This module must support both reliable and basic multicast. Recieved data is sent to the MessageOrderingModule. The GroupManagementModule is also notified with the senders process ID. 
-- recieve
+- receive
 - send(Group, Message)
 	Look up communication type in group
 	Look up group members
@@ -170,8 +170,8 @@ A framework (middleware) for communicating between distributed nodes within grou
 	(Interface from previous year http://www.cs.umu.se/kurser/5DV020/HT08/GCom.java)
 
 - joinGroup(String groupName)
-	Contact RMI registry and get groupleader
-	Contact groupleader
+	Contact RMI registry and get group-leader
+	Contact group-leader
 - createGroup
 	Register at RMI registry
 - removeGroup(String groupName)
@@ -210,19 +210,19 @@ When a node wants to create a new group, it contacts the RMI-Registry and leaves
 The leader removes all members from it's view of the group and then sends this updated view to all members of the group. It then unregisters the group name in the registry.
 
 \subsection{A member joins a group}
-When joining a group the prospective member connects to the RMI-Registry and gets a reference to the group leader. It then tells the group leader it want's to join the group. The leader adds the new member to it's view of the group and then sends this updated view to all members of the group, including the new member. When the new member recieves the updated view it knows it is part of the group.
+When joining a group the prospective member connects to the RMI-Registry and gets a reference to the group leader. It then tells the group leader it want's to join the group. The leader adds the new member to it's view of the group and then sends this updated view to all members of the group, including the new member. When the new member receives the updated view it knows it is part of the group.
 
 \subsection{A member leaves group}
 When a member wants to leave a group it sends a group view excluding itself to all the members of the group.
 
 \subsection{Send message to a group}
 
-\subsection{Member recieves message with much later timestamp than previous message}
+\subsection{Member receives message with much later time-stamp than previous message}
 
-\subsection{Groupleader leaves group}
-When the groupleader leaves the group the remaining members starts electing a new group leader by creating a semirandom (and unique) value and sending this to all other nodes. When a node recieves messages it compares the value in the incoming message with the value it created and sends the larger of theese to all other nodes. When a nodes recieves messages with it's own values it sets itself as groupleader and registers with the RMI-Registry.
+\subsection{Group-leader leaves group}
+When the group-leader leaves the group the remaining members starts electing a new group leader by creating a semi-random (and unique) value and sending this to all other nodes. When a node receives messages it compares the value in the incoming message with the value it created and sends the larger of these to all other nodes. When a nodes receives messages with it's own values it sets itself as group-leader and registers with the RMI-Registry.
 
-If the groupleader leaves a single member behind this node realizes it is alone in the group and sets itself as groupleader and registers with the registry.
+If the group-leader leaves a single member behind this node realizes it is alone in the group and sets itself as group-leader and registers with the registry.
 
 \subsection{Last member leaves group}
 When the last member of a group leaves it unregisters itself from the registry.
@@ -231,10 +231,10 @@ When the last member of a group leaves it unregisters itself from the registry.
 \section{Fault tolerance}
 
 \subsection{Detecting crashed members}
-The GroupManagementModule gets notified when a message is recieved and can therefore keep track of the time since the last message from a process, measured in vector time. If a process does not send anything for a long time it will be marked as crashed and removed from the group list.
+The GroupManagementModule gets notified when a message is received and can therefore keep track of the time since the last message from a process, measured in vector time. If a process does not send anything for a long time it will be marked as crashed and removed from the group list.
 
 \subsection{If the registry restarts}
-The leader if each group occationaly checks that the group is registered in the RMI-registry. If the registry has restarted for some reason the leader will re-register the group.
+The leader if each group occasionally checks that the group is registered in the RMI-registry. If the registry has restarted for some reason the leader will re-register the group.
 
 \subsection{If the group leader crashes}
 If the group leader crashes the group elects a new leader. (How?)
@@ -249,7 +249,7 @@ If the group is split in two due to netsplit the part with the leader will conti
 \section{Limitations}
 The RMI-registry is a single point of failure. If the registry crashes no processes can find or join groups. 
 
-If a group is splitted in two parts due to network failure and both parts still have contact  with the registry bad things will happen. This is assumed to never happen.
+If a group is split in two parts due to network failure and both parts still have contact  with the registry bad things will happen. This is assumed to never happen.
 
 All processes are assumed to be good. If a process starts to lie or send malicious messages bad things will happen.
 
