--- a/handin-1.0.tex
+++ b/handin-1.0.tex
@@ -133,9 +133,11 @@ Design a solution
 - ???
 - Profit!
 
+% TODO: We should design/workout how we will do debugging
 
 \subsection{GCom}
-A framework (middleware) for communicating between distributed nodes within groups
+A framework (middleware) for communicating between distributed nodes within groups.
+This module exposes the functionality of the other modules that are part of GCom so that referencing them directly should not be needed in order to use them.
 	(Interface from previous year http://www.cs.umu.se/kurser/5DV020/HT08/GCom.java)
 
 - joinGroup(String groupName)
